--- a/app/views/kasittelija/suunnittelu.html
+++ b/app/views/kasittelija/suunnittelu.html
@@ -36,7 +36,7 @@
           <td><input type="number" min="0" class="form-control"
                      ng-model="hakemus.myonnettavaAvustus" ng-blur="paivitaAvustus(hakemus.myonnettavaAvustus,hakemus.hakemusId)"/></td>
           <td>
-            <button class="btn btn-primary" ng-click="getPaatos(hakemus.hakemusId,hakemus.myonnettavaAvustus)">
+            <button class="btn btn-primary" ng-click="siirryPaatokseen(hakemus.hakemusId,hakemus.myonnettavaAvustus)">
               Päätöksentekoon
             </button>
           </td>
