Organisaation pankkitilinumero lisätty

--- a/app/views/kasittelija/hakemus.html
+++ b/app/views/kasittelija/hakemus.html
@@ -22,7 +22,7 @@
       <p>{{hakija}}</p>
       <h4>Pankkitilin numero</h4>
 
-      <p>Puuttuu</p>
+      <p>{{pankkitilinumero}}</p>
     </div>
     <div class="col-md-3">
       <h4>Hakijat</h4>
