jukutooltip tyylittely otettu käyttöön

--- a/app/views/hakija/hakemus.html
+++ b/app/views/hakija/hakemus.html
@@ -69,7 +69,7 @@
       <div class="row">
         <div class="col-md-12">
           <h3>VALTIONAVUSTUKSEN KOHDE JA HAETTAVA VALTIONAVUSTUKSEN MÄÄRÄ<a href=""><span
-            class='glyphicon glyphicon-question-sign'></span></a></h3>
+            class='jukutooltip glyphicon glyphicon-question-sign'></span></a></h3>
         </div>
       </div>
       <div class="panel panel-default">
@@ -471,7 +471,7 @@
         <div class="row">
           <div class="col-md-12">
             <label>Lisätietoja avustusten kohteista<a href=""><span
-              class='glyphicon glyphicon-question-sign'></span></a></label>
+              class='jukutooltip glyphicon glyphicon-question-sign'></span></a></label>
           </div>
         </div>
         <div class="row">
