--- a/app/views/kasittelija/hakemus.html
+++ b/app/views/kasittelija/hakemus.html
@@ -66,7 +66,7 @@
     <div class="row">
       <div class="col-md-12">
         <h3>VALTIONAVUSTUKSEN KOHDE JA HAETTAVA VALTIONAVUSTUKSEN MÄÄRÄ<a href=""><span
-          class='glyphicon glyphicon-question-sign'></span></a></h3>
+          class='jukutooltip glyphicon glyphicon-question-sign'></span></a></h3>
       </div>
     </div>
     <div class="panel panel-default">
@@ -400,7 +400,7 @@
     <div class="row">
       <div class="col-md-12">
         <h5>Lisätietoja avustusten kohteista<a href=""><span
-          class='glyphicon glyphicon-question-sign'></span></a></h5>
+          class='jukutooltip glyphicon glyphicon-question-sign'></span></a></h5>
       </div>
     </div>
     <div class="row">
