--- a/app/views/hakija/hakemus.html
+++ b/app/views/hakija/hakemus.html
@@ -92,7 +92,7 @@
             </div>
             <div class="col-md-6">
               <div class="form-group" show-errors="{showSuccess: true}">
-                <label>Haettava valtionavustus (euroa)</label>
+                <label>Haettava valtionavustus</label>
                 <input name="psa1haettavaavustus" type="text" min="-0.0001" ng-currency=""
                        class="form-control"
                        ng-model="psa1haettavaavustus"
@@ -105,7 +105,7 @@
             </div>
             <div class="col-md-6">
               <div class="form-group" show-errors="{showSuccess: true}">
-                <label>Kunnan oma rahoitusosuus (euroa)</label>
+                <label>Kunnan oma rahoitusosuus</label>
                 <input name="psa1omarahoitus" type="text" min="-0.0001" ng-currency="" class="form-control"
                        ng-model="psa1omarahoitus"
                        ui-validate="{omarahoitusRiittava: 'omarahoitusRiittava($value,psa1haettavaavustus)',positiivinenArvo: 'positiivinenArvo($value)'}"
@@ -116,7 +116,7 @@
                   class="help-block">Arvon tulee olla positiivinen.</p>
 
                 <p
-                  ng-show="avustusHakemusForm.psa1omarahoitus.$error.omarahoitusRiittava"
+                  ng-show="avustusHakemusForm.psa1omarahoitus.$error.omarahoitusRiittava && !avustusHakemusForm.psa1omarahoitus.$pristine"
                   class="help-block">Oma rahoitusosuus tulee olla vähintään haettavan avustusosuuden suuruinen.</p>
               </div>
             </div>
@@ -127,7 +127,7 @@
             </div>
             <div class="col-md-6">
               <div class="form-group" show-errors="{showSuccess: true}">
-                <label>Haettava valtionavustus (euroa)</label>
+                <label>Haettava valtionavustus</label>
                 <input name="psa2haettavaavustus" type="text" min="-0.0001" ng-currency=""
                        class="form-control"
                        ng-model="psa2haettavaavustus" ui-validate="{positiivinenArvo: 'positiivinenArvo($value)'}"/>
@@ -139,7 +139,7 @@
             </div>
             <div class="col-md-6">
               <div class="form-group" show-errors="{showSuccess: true}">
-                <label>Kunnan oma rahoitusosuus (euroa)</label>
+                <label>Kunnan oma rahoitusosuus</label>
                 <input name="psa2omarahoitus" type="text" min="-0.0001" ng-currency="" class="form-control"
                        ng-model="psa2omarahoitus"
                        ui-validate="{omarahoitusRiittava: 'omarahoitusRiittava($value,psa2haettavaavustus)',positiivinenArvo: 'positiivinenArvo($value)'}"
@@ -150,7 +150,7 @@
                   class="help-block">Arvon tulee olla positiivinen.</p>
 
                 <p
-                  ng-show="avustusHakemusForm.psa2omarahoitus.$error.omarahoitusRiittava"
+                  ng-show="avustusHakemusForm.psa2omarahoitus.$error.omarahoitusRiittava && !avustusHakemusForm.psa2omarahoitus.$pristine"
                   class="help-block">Oma rahoitusosuus tulee olla vähintään haettavan avustusosuuden suuruinen.</p>
               </div>
             </div>
@@ -161,7 +161,7 @@
             </div>
             <div class="col-md-6">
               <div class="form-group" show-errors="{showSuccess: true}">
-                <label>Haettava valtionavustus (euroa)</label>
+                <label>Haettava valtionavustus</label>
                 <input name="psamhaettavaavustus" type="text" min="-0.0001" ng-currency=""
                        class="form-control"
                        ng-model="psamhaettavaavustus" ui-validate="{positiivinenArvo: 'positiivinenArvo($value)'}"/>
@@ -173,7 +173,7 @@
             </div>
             <div class="col-md-6">
               <div class="form-group" show-errors="{showSuccess: true}">
-                <label>Kunnan oma rahoitusosuus (euroa)</label>
+                <label>Kunnan oma rahoitusosuus</label>
                 <input name="psamomarahoitus" type="text" min="-0.0001" ng-currency="" class="form-control"
                        ng-model="psamomarahoitus"
                        ui-validate="{omarahoitusRiittava: 'omarahoitusRiittava($value,psamhaettavaavustus)',positiivinenArvo: 'positiivinenArvo($value)'}"
@@ -184,7 +184,7 @@
                   class="help-block">Arvon tulee olla positiivinen.</p>
 
                 <p
-                  ng-show="avustusHakemusForm.psamomarahoitus.$error.omarahoitusRiittava"
+                  ng-show="avustusHakemusForm.psamomarahoitus.$error.omarahoitusRiittava && !avustusHakemusForm.psamomarahoitus.$pristine"
                   class="help-block">Oma rahoitusosuus tulee olla vähintään haettavan avustusosuuden suuruinen.</p>
               </div>
             </div>
@@ -212,7 +212,7 @@
             </div>
             <div class="col-md-6">
               <div class="form-group" show-errors="{showSuccess: true}">
-                <label>Haettava valtionavustus (euroa)</label>
+                <label>Haettava valtionavustus</label>
                 <input name="hkslhaettavaavustus" type="text" min="-0.0001" ng-currency=""
                        class="form-control"
                        ng-model="hkslhaettavaavustus" ui-validate="{positiivinenArvo: 'positiivinenArvo($value)'}"/>
@@ -224,7 +224,7 @@
             </div>
             <div class="col-md-6">
               <div class="form-group" show-errors="{showSuccess: true}">
-                <label>Kunnan oma rahoitusosuus (euroa)</label>
+                <label>Kunnan oma rahoitusosuus</label>
                 <input name="hkslomarahoitus" type="text" min="-0.0001" ng-currency="" class="form-control"
                        ng-model="hkslomarahoitus"
                        ui-validate="{omarahoitusRiittava: 'omarahoitusRiittava($value,hkslhaettavaavustus)',positiivinenArvo: 'positiivinenArvo($value)'}"
@@ -235,7 +235,7 @@
                   class="help-block">Arvon tulee olla positiivinen.</p>
 
                 <p
-                  ng-show="avustusHakemusForm.hkslomarahoitus.$error.omarahoitusRiittava"
+                  ng-show="avustusHakemusForm.hkslomarahoitus.$error.omarahoitusRiittava && !avustusHakemusForm.hkslomarahoitus.$pristine"
                   class="help-block">Oma rahoitusosuus tulee olla vähintään haettavan avustusosuuden suuruinen.</p>
               </div>
             </div>
@@ -246,7 +246,7 @@
             </div>
             <div class="col-md-6">
               <div class="form-group" show-errors="{showSuccess: true}">
-                <label>Haettava valtionavustus (euroa)</label>
+                <label>Haettava valtionavustus</label>
                 <input name="hkklhaettavaavustus" type="text" min="-0.0001" ng-currency=""
                        class="form-control"
                        ng-model="hkklhaettavaavustus" ui-validate="{positiivinenArvo: 'positiivinenArvo($value)'}"/>
@@ -258,7 +258,7 @@
             </div>
             <div class="col-md-6">
               <div class="form-group" show-errors="{showSuccess: true}">
-                <label>Kunnan oma rahoitusosuus (euroa)</label>
+                <label>Kunnan oma rahoitusosuus</label>
                 <input name="hkklomarahoitus" type="text" min="-0.0001" ng-currency="" class="form-control"
                        ng-model="hkklomarahoitus"
                        ui-validate="{omarahoitusRiittava: 'omarahoitusRiittava($value,hkklhaettavaavustus)',positiivinenArvo: 'positiivinenArvo($value)'}"
@@ -269,7 +269,7 @@
                   class="help-block">Arvon tulee olla positiivinen.</p>
 
                 <p
-                  ng-show="avustusHakemusForm.hkklomarahoitus.$error.omarahoitusRiittava"
+                  ng-show="avustusHakemusForm.hkklomarahoitus.$error.omarahoitusRiittava && !avustusHakemusForm.hkklomarahoitus.$pristine"
                   class="help-block">Oma rahoitusosuus tulee olla vähintään haettavan avustusosuuden suuruinen.</p>
               </div>
             </div>
@@ -280,7 +280,7 @@
             </div>
             <div class="col-md-6">
               <div class="form-group" show-errors="{showSuccess: true}">
-                <label>Haettava valtionavustus (euroa)</label>
+                <label>Haettava valtionavustus</label>
                 <input name="hkllhaettavaavustus" type="text" min="-0.0001" ng-currency=""
                        class="form-control"
                        ng-model="hkllhaettavaavustus" ui-validate="{positiivinenArvo: 'positiivinenArvo($value)'}"/>
@@ -292,7 +292,7 @@
             </div>
             <div class="col-md-6">
               <div class="form-group" show-errors="{showSuccess: true}">
-                <label>Kunnan oma rahoitusosuus (euroa)</label>
+                <label>Kunnan oma rahoitusosuus</label>
                 <input name="hkllomarahoitus" type="text" min="-0.0001" ng-currency="" class="form-control"
                        ng-model="hkllomarahoitus"
                        ui-validate="{omarahoitusRiittava: 'omarahoitusRiittava($value,hkllhaettavaavustus)',positiivinenArvo: 'positiivinenArvo($value)'}"
@@ -303,7 +303,7 @@
                   class="help-block">Arvon tulee olla positiivinen.</p>
 
                 <p
-                  ng-show="avustusHakemusForm.hkllomarahoitus.$error.omarahoitusRiittava"
+                  ng-show="avustusHakemusForm.hkllomarahoitus.$error.omarahoitusRiittava && !avustusHakemusForm.hkllomarahoitus.$pristine"
                   class="help-block">Oma rahoitusosuus tulee olla vähintään haettavan avustusosuuden suuruinen.</p>
               </div>
             </div>
@@ -314,7 +314,7 @@
             </div>
             <div class="col-md-6">
               <div class="form-group" show-errors="{showSuccess: true}">
-                <label>Haettava valtionavustus (euroa)</label>
+                <label>Haettava valtionavustus</label>
                 <input name="hktlhaettavaavustus" type="text" min="-0.0001" ng-currency=""
                        class="form-control"
                        ng-model="hktlhaettavaavustus" ui-validate="{positiivinenArvo: 'positiivinenArvo($value)'}"/>
@@ -326,7 +326,7 @@
             </div>
             <div class="col-md-6">
               <div class="form-group" show-errors="{showSuccess: true}">
-                <label>Kunnan oma rahoitusosuus (euroa)</label>
+                <label>Kunnan oma rahoitusosuus</label>
                 <input name="hktlomarahoitus" type="text" min="-0.0001" ng-currency="" class="form-control"
                        ng-model="hktlomarahoitus"
                        ui-validate="{omarahoitusRiittava: 'omarahoitusRiittava($value,hktlhaettavaavustus)',positiivinenArvo: 'positiivinenArvo($value)'}"
@@ -337,7 +337,7 @@
                   class="help-block">Arvon tulee olla positiivinen.</p>
 
                 <p
-                  ng-show="avustusHakemusForm.hktlomarahoitus.$error.omarahoitusRiittava"
+                  ng-show="avustusHakemusForm.hktlomarahoitus.$error.omarahoitusRiittava && !avustusHakemusForm.hktlomarahoitus.$pristine"
                   class="help-block">Oma rahoitusosuus tulee olla vähintään haettavan avustusosuuden suuruinen.</p>
               </div>
             </div>
@@ -365,7 +365,7 @@
             </div>
             <div class="col-md-6">
               <div class="form-group" show-errors="{showSuccess: true}">
-                <label>Haettava valtionavustus (euroa)</label>
+                <label>Haettava valtionavustus</label>
                 <input name="kimhaettavaavustus" type="text" min="-0.0001" ng-currency="" class="form-control"
                        ng-model="kimhaettavaavustus" ui-validate="{positiivinenArvo: 'positiivinenArvo($value)'}"/>
 
@@ -376,7 +376,7 @@
             </div>
             <div class="col-md-6">
               <div class="form-group" show-errors="{showSuccess: true}">
-                <label>Kunnan oma rahoitusosuus (euroa)</label>
+                <label>Kunnan oma rahoitusosuus</label>
                 <input name="kimomarahoitus" type="text" min="-0.0001" ng-currency="" class="form-control"
                        ng-model="kimomarahoitus"
                        ui-validate="{omarahoitusRiittava: 'omarahoitusRiittava($value,kimhaettavaavustus)',positiivinenArvo: 'positiivinenArvo($value)'}"
@@ -387,7 +387,7 @@
                   class="help-block">Arvon tulee olla positiivinen.</p>
 
                 <p
-                  ng-show="avustusHakemusForm.kimomarahoitus.$error.omarahoitusRiittava"
+                  ng-show="avustusHakemusForm.kimomarahoitus.$error.omarahoitusRiittava && !avustusHakemusForm.kimomarahoitus.$pristine"
                   class="help-block">Oma rahoitusosuus tulee olla vähintään haettavan avustusosuuden suuruinen.</p>
               </div>
             </div>
@@ -398,7 +398,7 @@
             </div>
             <div class="col-md-6">
               <div class="form-group" show-errors="{showSuccess: true}">
-                <label>Haettava valtionavustus (euroa)</label>
+                <label>Haettava valtionavustus</label>
                 <input name="kmpkhaettavaavustus" type="text" min="-0.0001" ng-currency=""
                        class="form-control"
                        ng-model="kmpkhaettavaavustus" ui-validate="{positiivinenArvo: 'positiivinenArvo($value)'}"/>
@@ -410,7 +410,7 @@
             </div>
             <div class="col-md-6">
               <div class="form-group" show-errors="{showSuccess: true}">
-                <label>Kunnan oma rahoitusosuus (euroa)</label>
+                <label>Kunnan oma rahoitusosuus</label>
                 <input name="kmpkomarahoitus" type="text" min="-0.0001" ng-currency="" class="form-control"
                        ng-model="kmpkomarahoitus"
                        ui-validate="{omarahoitusRiittava: 'omarahoitusRiittava($value,kmpkhaettavaavustus)',positiivinenArvo: 'positiivinenArvo($value)'}"
@@ -421,7 +421,7 @@
                   class="help-block">Arvon tulee olla positiivinen.</p>
 
                 <p
-                  ng-show="avustusHakemusForm.kmpkomarahoitus.$error.omarahoitusRiittava"
+                  ng-show="avustusHakemusForm.kmpkomarahoitus.$error.omarahoitusRiittava && !avustusHakemusForm.kmpkomarahoitus.$pristine"
                   class="help-block">Oma rahoitusosuus tulee olla vähintään haettavan avustusosuuden suuruinen.</p>
               </div>
             </div>
@@ -432,7 +432,7 @@
             </div>
             <div class="form-group" show-errors="{showSuccess: true}">
               <div class="col-md-6">
-                <label>Haettava valtionavustus (euroa)</label>
+                <label>Haettava valtionavustus</label>
                 <input name="kmkhaettavaavustus" type="text" min="-0.0001" ng-currency="" class="form-control"
                        ng-model="kmkhaettavaavustus" ui-validate="{positiivinenArvo: 'positiivinenArvo($value)'}"/>
 
@@ -443,7 +443,7 @@
             </div>
             <div class="col-md-6">
               <div class="form-group" show-errors="{showSuccess: true}">
-                <label>Kunnan oma rahoitusosuus (euroa)</label>
+                <label>Kunnan oma rahoitusosuus</label>
                 <input name="kmkomarahoitus" type="text" min="-0.0001" ng-currency="" class="form-control"
                        ng-model="kmkomarahoitus"
                        ui-validate="{omarahoitusRiittava: 'omarahoitusRiittava($value,kmkhaettavaavustus)',positiivinenArvo: 'positiivinenArvo($value)'}"
@@ -454,7 +454,7 @@
                   class="help-block">Arvon tulee olla positiivinen.</p>
 
                 <p
-                  ng-show="avustusHakemusForm.kmkomarahoitus.$error.omarahoitusRiittava"
+                  ng-show="avustusHakemusForm.kmkomarahoitus.$error.omarahoitusRiittava && !avustusHakemusForm.kmkomarahoitus.$pristine"
                   class="help-block">Oma rahoitusosuus tulee olla vähintään haettavan avustusosuuden suuruinen.</p>
               </div>
             </div>
@@ -465,7 +465,7 @@
             </div>
             <div class="col-md-6">
               <div class="form-group" show-errors="{showSuccess: true}">
-                <label>Haettava valtionavustus (euroa)</label>
+                <label>Haettava valtionavustus</label>
                 <input name="krthaettavaavustus" type="text" min="-0.0001" ng-currency="" class="form-control"
                        ng-model="krthaettavaavustus" ui-validate="{positiivinenArvo: 'positiivinenArvo($value)'}"/>
 
@@ -476,7 +476,7 @@
             </div>
             <div class="col-md-6">
               <div class="form-group" show-errors="{showSuccess: true}">
-                <label>Kunnan oma rahoitusosuus (euroa)</label>
+                <label>Kunnan oma rahoitusosuus</label>
                 <input name="krtomarahoitus" type="text" min="-0.0001" ng-currency="" class="form-control"
                        ng-model="krtomarahoitus"
                        ui-validate="{omarahoitusRiittava: 'omarahoitusRiittava($value,krthaettavaavustus)',positiivinenArvo: 'positiivinenArvo($value)'}"
@@ -487,7 +487,7 @@
                   class="help-block">Arvon tulee olla positiivinen.</p>
 
                 <p
-                  ng-show="avustusHakemusForm.krtomarahoitus.$error.omarahoitusRiittava"
+                  ng-show="avustusHakemusForm.krtomarahoitus.$error.omarahoitusRiittava && !avustusHakemusForm.krtomarahoitus.$pristine"
                   class="help-block">Oma rahoitusosuus tulee olla vähintään haettavan avustusosuuden suuruinen.</p>
               </div>
             </div>
@@ -498,7 +498,7 @@
             </div>
             <div class="col-md-6">
               <div class="form-group" show-errors="{showSuccess: true}">
-                <label>Haettava valtionavustus (euroa)</label>
+                <label>Haettava valtionavustus</label>
                 <input name="kmhaettavaavustus" type="text" min="-0.0001" ng-currency="" class="form-control"
                        ng-model="kmhaettavaavustus" ui-validate="{positiivinenArvo: 'positiivinenArvo($value)'}"/>
 
@@ -509,7 +509,7 @@
             </div>
             <div class="col-md-6">
               <div class="form-group" show-errors="{showSuccess: true}">
-                <label>Kunnan oma rahoitusosuus (euroa)</label>
+                <label>Kunnan oma rahoitusosuus</label>
                 <input name="kmomarahoitus" type="text" min="-0.0001" ng-currency="" class="form-control"
                        ng-model="kmomarahoitus"
                        ui-validate="{omarahoitusRiittava: 'omarahoitusRiittava($value,kmhaettavaavustus)',positiivinenArvo: 'positiivinenArvo($value)'}"
@@ -520,7 +520,7 @@
                   class="help-block">Arvon tulee olla positiivinen.</p>
 
                 <p
-                  ng-show="avustusHakemusForm.kmomarahoitus.$error.omarahoitusRiittava"
+                  ng-show="avustusHakemusForm.kmomarahoitus.$error.omarahoitusRiittava && !avustusHakemusForm.kmomarahoitus.$pristine"
                   class="help-block">Oma rahoitusosuus tulee olla vähintään haettavan avustusosuuden suuruinen.</p>
               </div>
             </div>
@@ -628,8 +628,3 @@
     </form>
   </div>
 </div>
-
-
-
-
-
