--- a/app/views/hakija/hakemusEsikatselu.html
+++ b/app/views/hakija/hakemusEsikatselu.html
@@ -91,14 +91,14 @@
           </div>
           <div ng-show="(psa1haettavaavustus>0)">
             <div class="col-md-6">
-              <h5>Haettava valtionavustus (euroa)</h5>
+              <h5>Haettava valtionavustus</h5>
 
-              <p>{{psa1haettavaavustus}}</p>
+              <p>{{psa1haettavaavustus |currency:"&euro;"}}</p>
             </div>
             <div class="col-md-6">
-              <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+              <h5>Kunnan oma rahoitusosuus</h5>
 
-              <p>{{psa1omarahoitus}}</p>
+              <p>{{psa1omarahoitus |currency:"&euro;"}}</p>
             </div>
           </div>
           <div ng-show="(psa1haettavaavustus==0)">
@@ -113,14 +113,14 @@
           </div>
           <div ng-show="(psa2haettavaavustus>0)">
             <div class="col-md-6">
-              <h5>Haettava valtionavustus (euroa)</h5>
+              <h5>Haettava valtionavustus</h5>
 
-              <p>{{psa2haettavaavustus}}</p>
+              <p>{{psa2haettavaavustus |currency:"&euro;"}}</p>
             </div>
             <div class="col-md-6">
-              <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+              <h5>Kunnan oma rahoitusosuus</h5>
 
-              <p>{{psa2omarahoitus}}</p>
+              <p>{{psa2omarahoitus |currency:"&euro;"}}</p>
             </div>
           </div>
           <div ng-show="(psa2haettavaavustus==0)">
@@ -135,14 +135,14 @@
           </div>
           <div ng-show="(psamhaettavaavustus>0)">
             <div class="col-md-6">
-              <h5>Haettava valtionavustus (euroa)</h5>
+              <h5>Haettava valtionavustus</h5>
 
-              <p>{{psamhaettavaavustus}}</p>
+              <p>{{psamhaettavaavustus |currency:"&euro;"}}</p>
             </div>
             <div class="col-md-6">
-              <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+              <h5>Kunnan oma rahoitusosuus</h5>
 
-              <p>{{psamomarahoitus}}</p>
+              <p>{{psamomarahoitus |currency:"&euro;"}}</p>
             </div>
           </div>
           <div ng-show="(psamhaettavaavustus==0)">
@@ -174,14 +174,14 @@
           </div>
           <div ng-show="(hkslhaettavaavustus>0)">
             <div class="col-md-6">
-              <h5>Haettava valtionavustus (euroa)</h5>
+              <h5>Haettava valtionavustus</h5>
 
-              <p>{{hkslhaettavaavustus}}</p>
+              <p>{{hkslhaettavaavustus |currency:"&euro;"}}</p>
             </div>
             <div class="col-md-6">
-              <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+              <h5>Kunnan oma rahoitusosuus</h5>
 
-              <p>{{hkslomarahoitus}}</p>
+              <p>{{hkslomarahoitus |currency:"&euro;"}}</p>
             </div>
           </div>
           <div ng-show="(hkslhaettavaavustus==0)">
@@ -196,14 +196,14 @@
           </div>
           <div ng-show="(hkklhaettavaavustus>0)">
             <div class="col-md-6">
-              <h5>Haettava valtionavustus (euroa)</h5>
+              <h5>Haettava valtionavustus</h5>
 
-              <p>{{hkklhaettavaavustus}}</p>
+              <p>{{hkklhaettavaavustus |currency:"&euro;"}}</p>
             </div>
             <div class="col-md-6">
-              <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+              <h5>Kunnan oma rahoitusosuus</h5>
 
-              <p>{{hkklomarahoitus}}</p>
+              <p>{{hkklomarahoitus |currency:"&euro;"}}</p>
             </div>
           </div>
           <div ng-show="(hkklhaettavaavustus==0)">
@@ -218,14 +218,14 @@
           </div>
           <div ng-show="(hkllhaettavaavustus>0)">
             <div class="col-md-6">
-              <h5>Haettava valtionavustus (euroa)</h5>
+              <h5>Haettava valtionavustus</h5>
 
-              <p>{{hkllhaettavaavustus}}</p>
+              <p>{{hkllhaettavaavustus |currency:"&euro;"}}</p>
             </div>
             <div class="col-md-6">
-              <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+              <h5>Kunnan oma rahoitusosuus</h5>
 
-              <p>{{hkllomarahoitus}}</p>
+              <p>{{hkllomarahoitus |currency:"&euro;"}}</p>
             </div>
           </div>
           <div ng-show="(hkllhaettavaavustus==0)">
@@ -240,14 +240,14 @@
           </div>
           <div ng-show="(hktlhaettavaavustus>0)">
             <div class="col-md-6">
-              <h5>Haettava valtionavustus (euroa)</h5>
+              <h5>Haettava valtionavustus</h5>
 
-              <p>{{hktlhaettavaavustus}}</p>
+              <p>{{hktlhaettavaavustus |currency:"&euro;"}}</p>
             </div>
             <div class="col-md-6">
-              <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+              <h5>Kunnan oma rahoitusosuus</h5>
 
-              <p>{{hktlomarahoitus}}</p>
+              <p>{{hktlomarahoitus |currency:"&euro;"}}</p>
             </div>
           </div>
           <div ng-show="(hktlhaettavaavustus==0)">
@@ -279,14 +279,14 @@
           </div>
           <div ng-show="(kimhaettavaavustus>0)">
             <div class="col-md-6">
-              <h5>Haettava valtionavustus (euroa)</h5>
+              <h5>Haettava valtionavustus</h5>
 
-              <p>{{kimhaettavaavustus}}</p>
+              <p>{{kimhaettavaavustus |currency:"&euro;"}}</p>
             </div>
             <div class="col-md-6">
-              <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+              <h5>Kunnan oma rahoitusosuus</h5>
 
-              <p>{{kimomarahoitus}}</p>
+              <p>{{kimomarahoitus |currency:"&euro;"}}</p>
             </div>
           </div>
           <div ng-show="(kimhaettavaavustus==0)">
@@ -301,14 +301,14 @@
           </div>
           <div ng-show="(kmpkhaettavaavustus>0)">
             <div class="col-md-6">
-              <h5>Haettava valtionavustus (euroa)</h5>
+              <h5>Haettava valtionavustus</h5>
 
-              <p>{{kmpkhaettavaavustus}}</p>
+              <p>{{kmpkhaettavaavustus |currency:"&euro;"}}</p>
             </div>
             <div class="col-md-6">
-              <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+              <h5>Kunnan oma rahoitusosuus</h5>
 
-              <p>{{kmpkomarahoitus}}</p>
+              <p>{{kmpkomarahoitus |currency:"&euro;"}}</p>
             </div>
           </div>
           <div ng-show="(kmpkhaettavaavustus==0)">
@@ -323,14 +323,14 @@
           </div>
           <div ng-show="(kmkhaettavaavustus>0)">
             <div class="col-md-6">
-              <h5>Haettava valtionavustus (euroa)</h5>
+              <h5>Haettava valtionavustus</h5>
 
-              <p>{{kmkhaettavaavustus}}</p>
+              <p>{{kmkhaettavaavustus |currency:"&euro;"}}</p>
             </div>
             <div class="col-md-6">
-              <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+              <h5>Kunnan oma rahoitusosuus</h5>
 
-              <p>{{kmkomarahoitus}}</p>
+              <p>{{kmkomarahoitus |currency:"&euro;"}}</p>
             </div>
           </div>
           <div ng-show="(kmkhaettavaavustus==0)">
@@ -345,14 +345,14 @@
           </div>
           <div ng-show="(krthaettavaavustus>0)">
             <div class="col-md-6">
-              <h5>Haettava valtionavustus (euroa)</h5>
+              <h5>Haettava valtionavustus</h5>
 
-              <p>{{krthaettavaavustus}}</p>
+              <p>{{krthaettavaavustus |currency:"&euro;"}}</p>
             </div>
             <div class="col-md-6">
-              <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+              <h5>Kunnan oma rahoitusosuus</h5>
 
-              <p>{{krtomarahoitus}}</p>
+              <p>{{krtomarahoitus |currency:"&euro;"}}</p>
             </div>
           </div>
           <div ng-show="(krthaettavaavustus==0)">
@@ -367,14 +367,14 @@
           </div>
           <div ng-show="(kmhaettavaavustus>0)">
             <div class="col-md-6">
-              <h5>Haettava valtionavustus (euroa)</h5>
+              <h5>Haettava valtionavustus</h5>
 
-              <p>{{kmhaettavaavustus}}</p>
+              <p>{{kmhaettavaavustus |currency:"&euro;"}}</p>
             </div>
             <div class="col-md-6">
-              <h5>Kunnan oma rahoitusosuus (euroa)</h5>
+              <h5>Kunnan oma rahoitusosuus</h5>
 
-              <p>{{kmomarahoitus}}</p>
+              <p>{{kmomarahoitus |currency:"&euro;"}}</p>
             </div>
           </div>
           <div ng-show="(kmhaettavaavustus==0)">
