--- a/app/views/kasittelija/suunnittelu.html
+++ b/app/views/kasittelija/suunnittelu.html
@@ -34,9 +34,11 @@
           </td>
           <td>{{hakemus.muutos}}</td>
           <td><input type="number" min="0" class="form-control"
-                     ng-model="hakemus.myonnettavaAvustus" ng-blur="paivitaAvustus(hakemus.myonnettavaAvustus,hakemus.hakemusId)"/></td>
+                     ng-model="hakemus.myonnettavaAvustus"
+                     ng-blur="paivitaAvustus(hakemus.myonnettavaAvustus,hakemus.hakemusId)"/></td>
           <td>
-            <button class="btn btn-primary" ng-click="siirryPaatokseen(hakemus.hakemusId,hakemus.myonnettavaAvustus)">
+            <button class="btn btn-primary"
+                    ng-click="siirryPaatokseen(hakemus.hakemusId,hakemus.haettuAvustus, hakemus.myonnettavaAvustus)">
               Päätöksentekoon
             </button>
           </td>
