--- a/app/styles/juku.css
+++ b/app/styles/juku.css
@@ -91,6 +91,17 @@ textarea
   background-color: #ffffff;
 }
 
+.drop-box {
+  background: none repeat scroll 0% 0% #eef;
+  border: 5px dashed #0067ce;
+  width: 100%;
+  height: 150px;
+  text-align: center;
+  padding-top: 25px;
+  float: left;
+  margin-left: 20px;
+}
+
 .uusihakemuskausi{
   border-style: dashed;
   border-width: 4px;
@@ -129,4 +140,10 @@ textarea
     top: 5px;
     height: 45px;
     color: #ffffff;
+}
+
+.vcenter {
+  display: inline-block;
+  vertical-align: middle;
+  float: none;
 }
