--- a/app/views/hakija/hakemus.html
+++ b/app/views/hakija/hakemus.html
@@ -553,20 +553,64 @@
           </div>
         </div>
       </div>
-      <div class="form-group">
-        <div class="row">
-          <div class="col-md-12">
-            <fieldset>
-              <legend>Liitetiedostot</legend>
-              <div ng-file-drop="" ng-model="files" class="drop-box ng-isolate-scope ng-valid ng-dirty well"
-                   drag-over-class="{accept:'dragover', reject:'dragover-err', delay:100}" multiple="true"
-                   allow-dir="true"
-                   accept="image/*,*pdf" ng-file-change="upload(files)">Raahaa kuvat tai PDF:t tähän
+      <div class="row">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h2 class="panel-title">Liitetiedostot</h2>
+          </div>
+          <div class="panel-body">
+            <div class="col-md-8">
+              <div ng-show="liitteet.length > 0" class="response">
+                <div class="sel-file" ng-repeat="l in liitteet">
+                  <p><i class="glyphicon glyphicon-file"></i>
+                    {{l.nimi}} ({{l.contenttype}})
+                    <a href="" ng-click="poistaLiite(l.liitenumero)"><span class='glyphicon glyphicon-remove-sign'></span></a></p>
+                  <!--
+                                        <img ng-show="f.dataUrl" ng-src="{{f.dataUrl}}" class="thumb"/>
+                                        <span class="progress" ng-show="f.progress >= 0">
+                                                    <div style="width:{{f.progress}}%">{{f.progress}}%</div>
+                                                </span>
+                                        <button class="button" ng-click="f.upload.abort();f.upload.aborted=true"
+                                                ng-show="f.upload != null && f.progress < 100 && !f.upload.aborted">Abort
+                                        </button>
+                                        {{f.name}} - size: {{f.size}}B - type: {{f.type}}
+                                        <a ng-show="f.result" href="javascript:void(0)"
+                                           ng-click="f.showDetail = !f.showDetail">details</a>
+
+                                        <div ng-show="f.showDetail">
+                                          <br/>
+
+                                          <div data-ng-show="f.result.result == null">{{f.result}}</div>
+                                          <ul>
+                                            <li ng-repeat="item in f.result.result">
+                                              <div data-ng-show="item.name">file name: {{item.name}}</div>
+                                              <div data-ng-show="item.fieldName">name: {{item.fieldName}}</div>
+                                              <div data-ng-show="item.size">size on the serve: {{item.size}}</div>
+                                              <div data-ng-show="item.value">value: {{item.value}}</div>
+                                            </li>
+                                          </ul>
+                                          <div data-ng-show="f.result.requestHeaders" class="reqh">request headers:
+                                            {{f.result.requestHeaders}}
+                                          </div>
+                                        </div>
+                                        -->
+                </div>
               </div>
-              <div style="display: none;" ng-no-file-drop="" class="drop-box">File Farg&amp;Drop not supported on your
-                browser
+            </div>
+
+            <div class="col-md-4 text-center">
+              <div ng-file-drop ng-model="myFiles" class="drop-box"
+                   drag-over-class="{accept:'dragover', reject:'dragover-err', delay:100}"
+                   multiple="true" allow-dir="true">
+                <p>Raahaa liite tähän</p>
+
+                <p>tai</p>
+
+                <div ng-no-file-drop>Tiedoston raahaaminen ei ole mahdollista tällä selain-versiolla</div>
+                <button ng-file-select class="btn btn-primary" ng-model="myFiles" multiple="true">Valitse tiedosto
+                </button>
               </div>
-            </fieldset>
+            </div>
           </div>
         </div>
       </div>
@@ -627,4 +671,5 @@
       </div>
     </form>
   </div>
+  {{liitteet | json}}
 </div>
