--- a/app/views/kasittelija/paatos.html
+++ b/app/views/kasittelija/paatos.html
@@ -126,10 +126,10 @@
   <div class="row">
     <div class="col-md-12">
       <div ng-show="(avustushakemus.hakemustilatunnus == 'T')">
-        <button data-ng-click="lahetaPaatos()" class="pull-right btn btn-success">Hyväksy päätös</button>
+        <button data-ng-click="hyvaksyPaatos()" class="pull-right btn btn-success">Hyväksy päätös</button>
       </div>
       <div ng-hide="(avustushakemus.hakemustilatunnus == 'T')">
-        <button data-ng-click="lahetaPaatos()" class="pull-right btn btn-success" disabled>Hyväksy päätös
+        <button data-ng-click="hyvaksyPaatos()" class="pull-right btn btn-success" disabled>Hyväksy päätös
         </button>
       </div>
     </div>
