Päätös-sivujen layout ongelmat korjattu

--- a/app/views/kasittelija/paatos.html
+++ b/app/views/kasittelija/paatos.html
@@ -48,7 +48,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-2"/>
+    <div class="col-md-2"></div>
     <div class="col-md-2">
 
       <div class="input-group input-group-sm">
@@ -62,7 +62,7 @@
     <!-- ng-blur="paivitaAvustus(hakemus.myonnettavaAvustus,hakemus.hakemusId)" -->
   </div>
   <div class="row">
-    <div class="col-md-2"/>
+    <div class="col-md-2"></div>
     <div class="col-md-10">
       <br>
 
@@ -72,7 +72,7 @@
   </div>
 
   <div class="row">
-    <div class="col-md-2"/>
+    <div class="col-md-2"></div>
     <div class="col-md-4">
       <p>Tiina Tuumala</p>
 
