--- a/app/views/kasittelija/paatosEsikatselu.html
+++ b/app/views/kasittelija/paatosEsikatselu.html
@@ -52,7 +52,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-2"/>
+    <div class="col-md-2"></div>
     <div class="col-md-10">
       <br>
 
@@ -66,7 +66,7 @@
   </div>
 
   <div class="row">
-    <div class="col-md-2"/>
+    <div class="col-md-2"></div>
     <div class="col-md-4">
       <p>Tiina Tuumala</p>
 
