Hakemuksen voi tarkastaa vain tilassa vireillä

--- a/app/views/kasittelija/hakemus.html
+++ b/app/views/kasittelija/hakemus.html
@@ -457,8 +457,15 @@
           suunnittelunäkymään</a>
       </div>
       <div class="col-md-6">
-        <button data-ng-click="tarkastaAvustushakemus()" class="pull-right btn btn-success">Merkitse tarkastetuksi
-        </button>
+        <div ng-show="(avustushakemus.hakemustilatunnus == 'V')">
+          <button data-ng-click="tarkastaAvustushakemus()" class="pull-right btn btn-success">Merkitse tarkastetuksi
+          </button>
+        </div>
+        <div ng-hide="(avustushakemus.hakemustilatunnus == 'V')">
+          <button data-ng-click="tarkastaAvustushakemus()" class="pull-right btn btn-success" disabled>Merkitse
+            tarkastetuksi
+          </button>
+        </div>
       </div>
     </div>
   </div>
