--- a/app/views/kasittelija/paatos.html
+++ b/app/views/kasittelija/paatos.html
@@ -53,13 +53,14 @@
 
       <div class="input-group input-group-sm">
         <input type="text" min="-0.0001" ng-currency="" class="form-control"
-               ng-model="paatos.myonnettyavustus"/>
+               ng-model="paatos.myonnettyavustus"
+               ng-focus="asetaVanhaArvo(paatos.myonnettyavustus)"
+               ng-blur="tarkistaTyhja(paatos.myonnettyavustus)"/>
       </div>
     </div>
     <div class="col-md-8">
       <p>(Suunniteltu valtionavustus oli: {{avustus| currency:"&euro;"}}).</p>
     </div>
-    <!-- ng-blur="paivitaAvustus(hakemus.myonnettavaAvustus,hakemus.hakemusId)" -->
   </div>
   <div class="row">
     <div class="col-md-2"></div>
