--- a/app/views/kasittelija/paatosEsikatselu.html
+++ b/app/views/kasittelija/paatosEsikatselu.html
@@ -4,7 +4,7 @@
       <p>Esikatselutila</p>
     </div>
     <div class="col-md-10">
-      <a href="#/k/paatos/{{vuosi}}/{{tyyppi}}/{{hakemusid}}/{{haettuavustus}}/{{avustus}}" class="btn btn-primary">Palaa
+      <a href="#/k/paatos/{{vuosi}}/{{tyyppi}}/{{lajitunnus}}/{{hakemusid}}/{{haettuavustus}}/{{avustus}}" class="btn btn-primary">Palaa
         päätökseen</a>
     </div>
   </div>
