--- a/app/views/kasittelija/paatos.html
+++ b/app/views/kasittelija/paatos.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <a href="#/k/suunnittelu/{{vuosi}}/{{tyyppi}}"><span class='glyphicon glyphicon-circle-arrow-left'></span>Palaa
+      <a href="#/k/suunnittelu/{{vuosi}}/{{tyyppi}}/{{lajitunnus}}"><span class='glyphicon glyphicon-circle-arrow-left'></span>Palaa
         suunnittelunäkymään</a>
     </div>
   </div>
@@ -87,7 +87,7 @@
   </div>
   <div class="row">
     <div class="col-md-8">
-      <a href="#/k/suunnittelu/{{vuosi}}/{{tyyppi}}"><span class='glyphicon glyphicon-circle-arrow-left'></span>Palaa
+      <a href="#/k/suunnittelu/{{vuosi}}/{{tyyppi}}/{{lajitunnus}}"><span class='glyphicon glyphicon-circle-arrow-left'></span>Palaa
         suunnittelunäkymään</a>
     </div>
     <div class="col-md-2">
