--- a/app/views/hakija/hakemusEsikatselu.html
+++ b/app/views/hakija/hakemusEsikatselu.html
@@ -4,7 +4,7 @@
       <p>Esikatselutila</p>
     </div>
     <div class="col-md-10">
-      <a href="#/l/hakemus/{{avustushakemus.id}}" class="btn btn-primary">Palaa hakemukseen</a>
+      <a href="#/h/hakemus/{{avustushakemus.id}}" class="btn btn-primary">Palaa hakemukseen</a>
     </div>
   </div>
   <div class="row">
